<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    tools:context=".LoginActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textTitleWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_25dp"
            style="@style/textTitleNunito"
            android:text="@string/dataWarning"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textBodyWarning"
            style="@style/textBodyRubik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/dataDiri"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toStartOf="@+id/textTitleWarning"
            app:layout_constraintTop_toBottomOf="@+id/textTitleWarning" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOkeKembali"
            style="@style/textTitleRubik"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="@dimen/dimen_35dp"
            android:background="@drawable/button_login_gradient"
            android:text="@string/oke"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_16sp"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textBodyWarning" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>